--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongodb": "^3.2.6",
+    "moment": "^2.30.1",
+    "mongodb": "^3.2.6"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
